<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.managepet.PetDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="8dp">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/toolbar_pet_detail"
                app:titleTextColor="@color/black" />

        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/petImage_IV"
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:contentDescription="@string/image_pet_cd"
            android:scaleType="centerCrop"
            android:src="@drawable/image_blank" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/petName_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/petType_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="10dp">


                <TextView
                    android:id="@+id/petGender_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_green"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/gender"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/petAge_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_green"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/age"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/desc_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/petDesc_TV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lorem_ipsum" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/petEditProfileBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/delete_Btn"
            android:backgroundTint="@color/orange_main"
            android:text="@string/pet_edit_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:icon="@drawable/ic_edit"
            app:iconTint="@color/white" />

        <Button
            android:id="@+id/delete_Btn"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/Red"
            android:paddingHorizontal="15dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:icon="@drawable/ic_delete"
            app:iconTint="@color/white" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>