...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_pet_type"
                android:textColor="@color/black_grey" />

            <Button
                android:id="@+id/petDetail_Btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="@color/white"
                android:textStyle="bold" />

...
